# challenges

./: .gitignore
tictactoe/: LICENSE  README.md  tictactoe.cabal
tictactoe/app/: Main.hs
tictactoe/src/: Board.hs  Computer.hs  Errors.hs  Game.hs  Human.hs  Minimax.hs  Moves.hs  Player.hs  Rules.hs  Settings.hs  UI.hs
tictactoe/src/Components/: Board.hs  Minimax.hs  Moves.hs
tictactoe/src/Players/: Computer.hs  Human.hs  Player.hs
tictactoe/src/UI/: UI.hs
tictactoe/src/UI/Console/: Base.hs  Messages.hs  Prompts.hs  Render.hs
tictactoe/src/components/: Board.hs  Minimax.hs  Rules.hs
tictactoe/src/players/: Human.hs
tictactoe/src/ui/: Errors.hs  UI.hs
tictactoe/test/: BoardSpec.hs  ComputerSpec.hs  GameSpec.hs  HumanSpec.hs  MinimaxSpec.hs  Mocks.hs  MovesSpec.hs  PlayerSpec.hs  RulesSpec.hs  SettingsSpec.hs  UISpec.hs
tictactoe/test/Components/: MovesSpec.hs  RulesSpec.hs
tictactoe/test/Players/: ComputerSpec.hs  HumanSpec.hs
tictactoe/test/UI/Console/: BaseSpec.hs  MessagesSpec.hs  PromptsSpec.hs  RenderSpec.hs
tictactoe/test/components/: BoardSpec.hs  MinimaxSpec.hs  RulesSpec.hs
tictactoe/test/players/: ComputerSpec.hs  HumanSpec.hs
tictactoe/test/ui/: UISpec.hs
