name:                tictactoe
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/lee-hn/challenges/tree/master/tictactoe#readme
license:             BSD3
license-file:        LICENSE
author:              Hana Lee 
maintainer:          hana@8thlight.com 
copyright:           2017 (c) Hana Lee
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Board
                     , Moves
                     , Rules
                     , Game
                     , Settings
                     , Player
                     , UI
  build-depends:       base >= 4.7 && < 5
                     , mtl
  default-language:    Haskell2010

executable tictactoe-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tictactoe
  default-language:    Haskell2010

test-suite tictactoe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tictactoe
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lee-hn/challenges
